<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.currency_basket.CurrencyBasketFragment">

    <TextView
        android:id="@+id/currency_basket_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency_basket_label"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint = "@string/select_date"
        android:focusableInTouchMode="true"
        android:cursorVisible="false"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@+id/currency_basket_label"
        app:layout_constraintStart_toStartOf="@+id/currency_basket_label"/>

    <Button
        android:id="@+id/show_basket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/show_basket"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="@+id/date"/>

    <include
        android:id="@+id/basket_rates_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/item_basket_currency_rates"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/show_basket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_currencies_basket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:listitem="@layout/item_basket_currency_rates"
        app:layout_constraintTop_toBottomOf="@+id/basket_rates_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>